@@ -7,6 +7,8 @@
         * anonymine_engine.py (game_engine.init_field2):
             - Handle EINTR on os.wait, os.fork already does this
               unintentionally.
+            - raise security_alert rather than Exception for the timeout alarm.
+              (except Exception caught lots of other stuff.)
 
 2016-07-16      Oskar Skog      <oskar.skog.finland@gmail.com>
     0.2.16
